src/tools/clangbackend/ipcsource/translationunit.cpp
@@ -213,7 +213,7 @@ const QSet<Utf8String> &TranslationUnit::dependedFilePaths() const
 
 void TranslationUnit::setDirtyIfDependencyIsMet(const Utf8String &filePath)
 {
-    if (d->dependedFilePaths.contains(filePath)) {
+    if (d->dependedFilePaths.contains(filePath) && isMainFileAndExistsOrIsOtherFile(filePath)) {
         d->needsToBeReparsed = true;
         d->hasNewDiagnostics = true;
     }
@@ -247,6 +247,14 @@ void TranslationUnit::removeTranslationUnitIfProjectPartWasChanged() const
 bool TranslationUnit::projectPartIsOutdated() const
 {
     return d->projectPart.lastChangeTimePoint() >= d->lastProjectPartChangeTimePoint;
+}
+
+bool TranslationUnit::isMainFileAndExistsOrIsOtherFile(const Utf8String &filePath) const
+{
+    if (filePath == d->filePath)
+        return QFileInfo::exists(d->filePath);
+
+    return true;
 }
 
 void TranslationUnit::createTranslationUnitIfNeeded() const
